fixed code posts from overflowing off the screen

--- a/css/main.css
+++ b/css/main.css
@@ -79,3 +79,7 @@ code {
 	padding: 0px 25px 5px 0px;
 }
 
+pre {
+	white-space: pre-wrap;
+	word-break: break-word;
+}
